@@ -1,5 +1,9 @@
 2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* gtk/gtkmm/stock.h: update gtk stock icon names
+
+2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* docs/reference/Makefile.am:
 	* gtk/gtkmm/stock.h:
 	* gtk/src/calendar.hg:
